# haitun2

./: .gitmodules  README.md
auto_drive/: CMakeLists.txt  package.xml
auto_drive/cfg/: PID.cfg
auto_drive/include/: PID.hpp
auto_drive/launch/: auto_drive.launch  joy_drive.launch
auto_drive/msg/: States.msg
auto_drive/scripts/: autodrive.py  mainwindow.py  pid.py  record_data.py  tunparms.py
auto_drive/src/: Logitech_controller.cpp  PID.cpp  auto_drive.cpp  joy_drive.cpp
usv_gazebo_plugins/src/: usv_gazebo_dynamics_plugin.cc  usv_gazebo_thrust_plugin.cc
vrx_gazebo/: CMakeLists.txt  package.xml
vrx_gazebo/launch/: navigation_task.launch  usv_autodrive.launch  vrx.launch
vrx_gazebo/nodes/: autodrive.py  twist2thrust copy.py
vrx_gazebo/worlds/: example_course.world.xacro  navigation_task.world.xacro
vrx_gazebo/worlds/xacros/: usv_wind_plugin.xacro
wamv_gazebo/urdf/: wamv_gazebo.xacro
wamv_gazebo/urdf/dynamics/: wamv_gazebo_dynamics_plugin.xacro
wamv_gazebo/urdf/thruster_layouts/: wamv_gazebo_thruster_config.xacro  wamv_one_thrusters.xacro
wave_gazebo/world_models/ocean_waves/: model.xacro
